try to change $scope.thisvalue after click on a bar

--- a/highcharts-starter/www/templates/tab-dash.html
+++ b/highcharts-starter/www/templates/tab-dash.html
@@ -3,5 +3,10 @@
     <div>
       <highchart id="chart1" config="chartConfig"></highchart>
     </div>
+    <input ng-model="thisvalue"> </input>
+    <div ng-controller='DashCtrl'>
+    	<p> this is {{thisvalue}}</p>
+    	<p> this is {{thispt}}</p>
+	</div>
   </ion-content>
 </ion-view>
